# QtSOAP

./: CMakeLists.txt
examples/easter/: CMakeLists.txt
examples/google/: CMakeLists.txt  google.cpp
examples/population/: CMakeLists.txt
src/: CMakeLists.txt  qtsoap.cpp
